<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@drawable/bg_top_bar"
    android:layout_marginStart="@dimen/screen_horizontal_margin"
    android:layout_marginEnd="@dimen/screen_horizontal_margin"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/string_top_bar_back"
        android:src="@android:drawable/ic_media_previous" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/string_top_bar_title"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>

    <ImageButton
        android:id="@+id/btn_help"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/string_top_bar_hints"
        android:src="@android:drawable/ic_menu_help" />

    <ImageButton
        android:id="@+id/btn_options"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/string_top_bar_options"
        android:src="@android:drawable/ic_menu_manage" />

</LinearLayout>
