<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:layout_marginStart="@dimen/screen_horizontal_margin"
    android:layout_marginEnd="@dimen/screen_horizontal_margin"
    android:paddingStart="@dimen/screen_horizontal_padding"
    android:paddingEnd="@dimen/screen_horizontal_padding"
    android:paddingTop="24dp"
    android:paddingBottom="24dp">

    <include
        android:id="@+id/top_bar"
        layout="@layout/view_top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_option_vibration_on_wrong"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_vibration_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_option_night_theme"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_night_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/string_option_language"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <Spinner
        android:id="@+id/spinner_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

</LinearLayout>
